# FARD

./: .fard_store_ns.json  .gitattributes  .gitignore  Cargo.toml  FARD-EBNF.md  FARD_PACKAGE_MANAGER.md  README.md  ROADMAP.md  install.sh  main.fard  run_demo.sh
apps/: avbundle_artifact_demo.fard  avbundle_demo.fard  avbundle_export_demo.fard  fard-build.fard  fard_bc_interp.fard  fard_codegen.fard  fard_elf.fard  fard_emit.fard  fard_ir_interp.fard  fard_lower.fard  fard_stdlib.fard  fard_x86.fard  fardbundle.fard  fardc.fard  fardc_native.fard  fardcheck.fard  farddoc.fard  fardeval.fard  fardfmt.fard  fardlex.fard  fardlex2.fard  fardlock.fard  fardparse.fard  fardregistry.fard  frame_sequence_contract_demo.fard  gifbridge_artifact_demo.fard  gradient_png.fard  gradient_png_16.fard  gradient_png_64.fard  gradient_ppm.fard  mp4_contract_demo.fard  mp4_manifest_demo.fard  test_list_chunk.fard  test_minimal.fard  tone_gen.fard  tone_gen_debug.fard  tone_gen_trace.fard  transcode_pipeline_demo.fard  video_test_pattern.fard  webm_contract_demo.fard  (+1 more)
bootstrap/: Dockerfile  Makefile  double.fardc  fib.fardc  seven.fardc  simple.fardc  test.fardc  vm.asm
crates/arith-core/: Cargo.toml
docs/: null_semantics.md  vs_python_rust_js.md
linguist-submission/: FARD.yml  fard.tmLanguage.json
ontology/: stdlib_surface.v1_0.ontology.json
spec/: fard_bytecode.md  fard_ir.md  fard_native.md  stdlib_surface.v1_0.ontology.json  stdlib_surface_tables.v1_0.ontology.json
src/: builtin_pipe_v1.rs  builtin_std.rs  lib.rs
tests/: debug_add.fard  debug_all_defs.fard  debug_and.fard  (+438 more)
(+104 files in other folders)
